[package]
name = "sakaagari"
version = "0.1.0"
authors = ["Kier Davis <me@kierdavis.com>"]
description = "Lightweight key-value store backed by git"
repository = "https://github.com/kierdavis/sakaagari"
license = "Apache-2.0"
keywords = ["database", "git", "key-value", "lightweight"]
categories = ["database", "database-implementations"]
edition = "2018"

[dependencies]
git2 = "0.13.12"
serde = "1.0.117"
toml = "0.5.7"
