[package]
name = "sakaagari"
version = "0.2.0-dev"
authors = ["Kier Davis <me@kierdavis.com>"]
description = "Lightweight key-value store backed by git"
repository = "https://github.com/kierdavis/sakaagari"
license = "Apache-2.0"
keywords = ["database", "git", "key-value", "lightweight"]
categories = ["database", "database-implementations"]
edition = "2018"

[dependencies]
git2 = { version = "0.13.12", default-features = false }
serde = { version = "1.0.117", default-features = false }
toml = { version = "0.5.7", default-features = false }
